{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "PlayerActions",
            "id": "c5e2e51f-756e-484b-8854-86c015728203",
            "actions": [
                {
                    "name": "PaddleLeft",
                    "type": "Button",
                    "id": "7e144f8a-388f-4a87-a97b-48f0491b306e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PaddleRight",
                    "type": "Button",
                    "id": "034645cd-a8ae-497a-bb92-b77da312b722",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "57f66380-1ec4-453c-a983-ca2993fe8e5e",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "PaddleLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d2615ed9-20b1-48d3-9bf2-3ac70158019b",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "PaddleRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Controller",
            "bindingGroup": "Controller",
            "devices": [
                {
                    "devicePath": "<XInputController>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        }
    ]
}